<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ObjetivosActivity">


    <ImageButton
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:id="@+id/bDeportes"
        android:src="@drawable/football"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/content_deportes"
        android:adjustViewBounds="false"
        android:onClick="abreVistaImpresion"
        android:layout_marginLeft="90dp"/>
    <ImageButton
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:id="@+id/bFitness"
        android:src="@drawable/gym"
        android:contentDescription="@string/content_fitness"
        android:onClick="abreVistaImpresion"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="250dp"/>
    <ImageButton
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:id="@+id/bSalud"
        android:src="@drawable/salud"
        android:contentDescription="@string/content_salud"
        android:onClick="abreVistaImpresion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tDeportes"
        android:text="@string/texto_deportes"
        android:layout_alignTop="@+id/bDeportes"
        android:layout_toLeftOf="@+id/bSalud"
        android:layout_toStartOf="@+id/bSalud"
        android:layout_marginTop="-25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tSalud"
        android:text="@string/texto_salud"
        android:layout_alignTop="@+id/bSalud"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tFitness"
        android:text="@string/texto_fitness"
        android:layout_above="@+id/tDeportes"
        android:layout_alignLeft="@+id/bFitness"
        android:layout_alignStart="@+id/bFitness"
        android:layout_marginLeft="35dp"/>
</RelativeLayout>
