<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eci.mipersonaltrainer.UsuarioYaRegistradoActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDni"
        android:inputType="number"
        android:hint="@string/hint_busqueda_dni"
        android:layout_marginTop="7dp"
        />

    <info.hoang8f.widget.FButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fbutton:buttonColor="@color/fbutton_color_turquoise"
        android:text="@string/btn_buscar"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="3dp"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/fbutton_color_midnight_blue"
        android:id="@+id/bBuscar"
        android:onClick="consultaporcodigo"
        android:layout_marginLeft="140dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/bBuscar"
        android:layout_toRightOf="@+id/tvA">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etNom"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="24dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etFecha"
            android:inputType="date"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="14dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etAltura"
            android:inputType="number"
            android:layout_marginTop="24dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/etPeso"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        fbutton:buttonColor="@color/fbutton_color_turquoise"
        android:text="@string/boton_guardar_cambios"
        android:id="@+id/bGuardarCambios"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="4dp"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/fbutton_color_midnight_blue"
        android:onClick="modificacion"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nombre"
        android:id="@+id/tvN"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/bBuscar"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:id="@+id/tvE"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fecha"
        android:id="@+id/tvF"
        android:layout_marginTop="195dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_altura"
        android:id="@+id/tvA"
        android:layout_marginTop="250dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_peso"
        android:id="@+id/tvP"
        android:layout_marginTop="310dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kg"
        android:visibility="invisible"
        android:id="@+id/tvKg"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="250dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cm"
        android:visibility="invisible"
        android:id="@+id/tvCm"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="310dp" />

</RelativeLayout>
