<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
>


    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        bootstrap:be_roundedCorners="true"
        android:id="@+id/etContraseña"
        android:hint="@string/hint_contra"
        android:layout_below="@+id/etUsuario"
        android:layout_alignParentRight="true"
        android:layout_marginTop="56dp" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        bootstrap:be_roundedCorners="true"
        android:id="@+id/etUsuario"
        android:hint="@string/hint_usuario"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true" />


    <info.hoang8f.widget.FButton
        android:layout_width="200dp"
        android:layout_height="45dp"
        fbutton:buttonColor="@color/fbutton_color_turquoise"
        android:text="@string/boton_sesion"
        android:id="@+id/bSesion"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="3dp"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/fbutton_color_midnight_blue"
        android:onClick="validad"
        android:textStyle="bold"
        android:layout_below="@+id/etContraseña"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario:"
        android:id="@+id/tvUsuario"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/etUsuario"
        android:layout_alignLeft="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contraseña:"
        android:id="@+id/tvContraseña"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/etContraseña"
        android:layout_alignRight="@+id/tvUsuario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Panel Admin"
        android:id="@+id/textView"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>

